--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -31,3 +31,22 @@
 .icon-around-clock {
     background-image: url("../img/icons-sprite.svg#icon-around-clock");
 }
+
+.icon-facebook {
+    background-image: url("../img/icons-sprite.svg#bxl-facebook");
+}
+.icon-instagram {
+    background-image: url("../img/icons-sprite.svg#bxl-instagram");
+}
+.icon-linkedin {
+    background-image: url("../img/icons-sprite.svg#bxl-linkedin");
+}
+.icon-telegram {
+    background-image: url("../img/icons-sprite.svg#bxl-telegram");
+}
+.icon-youtube {
+    background-image: url("../img/icons-sprite.svg#bxl-youtube");
+}
+.icon-mail {
+    background-image: url("../img/icons-sprite.svg#mail");
+}
