--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -98,15 +98,15 @@
 	}
 
 	&.btn-outline-primary{
-		color: #324C9A;
+		color: #003d8f;
 		background-color: transparent;
 		background-image: none;
-		border-color: #324C9A;
+		border-color: #003d8f;
         
 		&:hover {
 			color: #fff;
-			background-color: #324C9A;
-			border-color: #324C9A;
+			background-color: #003d8f;
+			border-color: #003d8f;
 		}
 		&:focus {
 			box-shadow: 0 0 0 0.2rem rgb(0,123,255 / 50%);
@@ -116,6 +116,11 @@
 			background-color: transparent;
 			background-image: none;
 			border-color: #fff;
+			&:hover {
+				color: #fff;
+				background-color: #003d8f;
+				border-color: #003d8f;
+			}
 		}
 	}
 	&.btn-outline-secondary{
