--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -50,3 +50,19 @@
 .icon-mail {
     background-image: url("../img/icons-sprite.svg#mail");
 }
+
+.icon-ship{
+    background-image: url("../img/icons-sprite.svg#icon-ship");
+}
+.icon-train{
+    background-image: url("../img/icons-sprite.svg#icon-train");
+}
+.icon-lorry{
+    background-image: url("../img/icons-sprite.svg#icon-lorry");
+}
+.icon-package{
+    background-image: url("../img/icons-sprite.svg#icon-package");
+}
+.icon-airplane{
+    background-image: url("../img/icons-sprite.svg#icon-airplane");
+}
