--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,9 +1,28 @@
 <header class="header">
     <div class="container">
-
-
+        <div class="header__logo"><img src="./img/logo-kapital.svg" width="120" height="24px" alt=""></div>
         <div class="services">
-
+            <div class="services__item">
+                <i class="icon icon-ship"></i>
+                <div class="services__name">Ж/Д перевозки</div>
+            </div>
+            <div class="services__item">
+                <i class="icon icon-lorry"></i>
+                <div class="services__name">Автоперевозки</div>
+            </div>
+            <div class="services__item">
+                <i class="icon icon-airplane"></i>
+                <div class="services__name">Авиаперевозки</div>
+            </div>
+            <div class="services__item">
+                <i class="icon icon-ship"></i>
+                <div class="services__name">Мультимодальные
+                    перевозки</div>
+            </div>
+            <div class="services__item">
+                <i class="icon icon-package"></i>
+                <div class="services__name">Курьерские услуги</div>
+            </div>
         </div>
     </div>
 </header>
