--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -2,4 +2,15 @@
   background-image: url("../img/header-bg.png");
   background-size: cover;
   background-position: center;
+  padding: 90px 0;
+  &__logo{
+    position: absolute;
+    top: 30px;
+    img{
+      max-width: 100%;
+      height: auto;
+      display: block;
+      object-fit: contain;
+    }
+  }
 }
