--- a/src/scss/componets/services.scss
+++ b/src/scss/componets/services.scss
@@ -1,3 +1,19 @@
 .services{
-
+  display: flex;
+  gap: 20px;
+  &__item{
+    text-align:center;
+  }
+  &__name{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 119.1%;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .icon{
+    width: 40px;
+    height: 40px;
+  }
 }
