--- a/src/scss/componets/articles.scss
+++ b/src/scss/componets/articles.scss
@@ -101,4 +101,11 @@
       margin-right: 3px;
     }
   }
+  @include r(767){
+    &__body {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 30px;
+    }
+  }
 }
