--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -3,6 +3,25 @@
   background-size: cover;
   background-position: center;
   padding: 90px 0;
+  max-height: 900px;
+  height: 100vh;
+  position: relative;
+  &:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0.21) 14.88%, rgba(0, 0, 0, 0) 25.78%), linear-gradient(217.1deg, rgba(0, 0, 0, 0.21) 11.71%, rgba(0, 0, 0, 0) 31.53%), linear-gradient(158.58deg, rgba(0, 0, 0, 0.21) 7.11%, rgba(0, 0, 0, 0) 24.92%);
+  }
+  &__body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    position: relative;
+  }
   &__logo{
     position: absolute;
     top: 30px;
@@ -11,6 +30,42 @@
       height: auto;
       display: block;
       object-fit: contain;
+
     }
   }
+  &__right{
+    text-align: right;
+    margin-top: -30px;
+  }
+  &__logo-big{
+    margin-bottom: 32px;
+    img{
+      max-width: 100%;
+      height: auto;
+      display: block;
+      object-fit: contain;
+      margin-left: auto;
+    }
+  }
+  &__subtitle{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 119.1%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .container{
+    height: 100%;
+  }
+  @include r(767){
+    &:before{
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+    }
+    &__right{
+      text-align: center;
+      margin: auto auto 30px;
+    }
+  }
+
 }
