--- a/src/template/_footer.html
+++ b/src/template/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer scroll-reveal">
     <div class="container">
         <div class="footer__body">
         <div class="footer__copy">© 2021 Atasu Group</div>
