--- a/src/scss/componets/business.scss
+++ b/src/scss/componets/business.scss
@@ -40,6 +40,12 @@
     line-height: 150%;
     color: #000000;
   }
+  @include r(1154){
+    &__body {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(254px, 1fr));
+    }
+  }
   @include r(767){
     &__body{
       gap: 30px;
