--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,12 +1,12 @@
 <header class="header">
     <div class="container">
-        <div class="header__logo"><img src="./img/logo-kapital.svg" width="120" height="24px" alt=""></div>
+        <div class="header__logo scroll-reveal"><img src="./img/logo-kapital.svg" width="120" height="24px" alt=""></div>
         <div class="header__body">
-        <div class="header__right">
+        <div class="header__right scroll-reveal">
             <div class="header__logo-big"><img src="./img/logo-big.svg" width="464" height="110" alt=""></div>
             <div class="header__subtitle">Перевозки от простых до сложных</div>
         </div>
-        <div class="services">
+        <div class="services scroll-reveal">
             <div class="services__item">
                 <i class="icon icon-ship"></i>
                 <div class="services__name">Ж/Д перевозки</div>
