--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -45,6 +45,8 @@
   }
   &__logo-big{
     margin-bottom: 32px;
+    display: block;
+    text-decoration: none;
     img{
       max-width: 100%;
       height: auto;
