--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="container">
-        <div class="header__logo scroll-reveal"><img src="./img/logo-kapital.svg" width="120" height="24px" alt=""></div>
+        <a href="#" class="header__logo scroll-reveal"><img src="./img/logo-kapital.svg" width="120" height="24px" alt=""></a>
         <div class="header__body">
         <div class="header__right scroll-reveal">
             <div class="header__logo-big"><img src="./img/logo-big.svg" width="464" height="110" alt=""></div>
