--- a/src/scss/componets/services.scss
+++ b/src/scss/componets/services.scss
@@ -3,6 +3,12 @@
   gap: 20px;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-width: 1110px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  right: 0;
   &__item{
     text-align:center;
   }
